--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     implementation group: 'org.json', name: 'json', version: '20210307'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
+
 }
 
 test {
